# plankai

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.css  index.html  index.js  package-lock.json  package.json  startup.sh
.bin/: create-wasm-app.js
app/: terminal.js
libs/CLI/: Cargo.toml
libs/CLI/src/: args.rs  lib.rs
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform_crossover.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: boltzmann.rs  rank.rs  tournament.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  world.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  config.rs  eye.rs  food.rs  lib.rs  statistics.rs  world.rs
libs/statistics/: Cargo.toml
libs/statistics/src/: lib.rs
src/: chromosome.rs  crossover.rs  lib.rs  mutation.rs  selection.rs
src/crossover/: uniform_crossover.rs
src/mutation/: gaussian.rs
src/selection/: roulette_wheel.rs
