[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0.139", features =["derive"]}
wasm-bindgen = {version = "0.2.81", features = ["serde-serialize"]}
lib-simulation = { path = "../simulation" }
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"]}
